--- a/app/src/main/res/layout/info_window_layout.xml
+++ b/app/src/main/res/layout/info_window_layout.xml
@@ -12,7 +12,8 @@
         android:id="@+id/infoView"
         android:textColor="#000000"
         android:autoLink="web"
-      />
+        android:text="Dette er en kyststi med en link som skal linke deg til en heftig nettside"
+        android:textAlignment="center" />
 
 
 
