--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -40,8 +40,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/kyststiInfo"
         android:textColor="@android:color/white"
-        android:autoLink="web"
-        android:text="Dette er en kyststi med en link som skal linke deg til en heftig nettside og kanskje med en lang link som dette: http://stackoverflow.com/questions/16317224/custom-infowindow-with-google-maps-api-v2"
+        android:text="Kyststi-info"
         android:textAlignment="center"
         android:layout_toLeftOf="@+id/onofflocationbutton"
         android:layout_toStartOf="@+id/onofflocationbutton"
