--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -34,22 +34,35 @@
         android:alpha="0.7"
         android:layout_alignParentLeft="false" />
 
+        <ViewAnimator
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/viewAnimator"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginLeft="81dp"
+            android:layout_marginStart="81dp" />
 
-    <TextView
-        android:layout_width="279dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/kyststiInfo"
-        android:textColor="@android:color/white"
-        android:text="Kyststi-info"
-        android:textAlignment="center"
-        android:layout_toLeftOf="@+id/onofflocationbutton"
-        android:layout_toStartOf="@+id/onofflocationbutton"
-        android:layout_alignParentLeft="false"
-        android:layout_alignParentTop="true"
-        android:gravity="center"
-        android:background="@color/button_material_dark"
-        android:layout_marginTop="6dp"
-        />
 
     </RelativeLayout>
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/kyststiInfo"
+        android:textColor="@android:color/black"
+        android:text="Kyststi-info\n\n Link her"
+        android:textAlignment="center"
+        android:gravity="center"
+        android:background="@android:color/white"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="center_horizontal|bottom"
+        android:paddingTop="5dp"
+        android:shadowColor="#ffffff"
+        android:paddingBottom="5dp" />
 </FrameLayout>
