--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -2,7 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MapsActivity" >
+    tools:context=".MapsActivity"
+    >
 
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
@@ -14,14 +15,14 @@
         android:name="com.google.android.gms.maps.SupportMapFragment"
 
 
-
-
-
         />
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="6dp">
+        android:layout_marginBottom="0dp"
+        android:gravity="center"
+        android:id="@+id/relativeLayout">
 
     <Button
         android:layout_alignParentRight="true"
