--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -51,7 +51,7 @@
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/kyststiInfo"
+        android:id="@+id/infobar"
         android:textColor="@android:color/black"
         android:text="Kyststi-info\n\n Link her"
         android:textAlignment="center"
