--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,9 +1,48 @@
+<android.support.v7.widget.Toolbar android:id="@+id/my_toolbar"
+    android:layout_width="match_parent"
+    android:layout_height="?attr/actionBarSize"
+    android:background="?attr/colorPrimary"
+    android:elevation="4dp"
+    android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+    android:title="test"
+
+
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".MapsActivity">
+    >
+
+
+
+        <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:gravity="right">
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/layers"
+                android:src="@drawable/ic_layers_white_24dp"
+                android:background="@android:color/transparent"
+                android:paddingRight="8dp"
+                android:layout_alignParentEnd="true"
+
+
+
+
+                />
+        </RelativeLayout>
+
+
+
+
+
+
+
 
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
@@ -24,36 +63,6 @@
         android:gravity="center"
         android:id="@+id/relativeLayout">
 
-    <!--<Button
-        android:layout_alignParentRight="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Sporing på"
-        android:id="@+id/onofflocationbutton"
-        android:layout_alignParentStart="false"
-        android:layout_alignParentEnd="false"
-        android:alpha="0.7"
-        android:layout_alignParentLeft="false" />-->
-
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/onofflocationbutton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/location_off_64px"
-            app:elevation="4dp"
-            android:alpha="0.7"
-
-            android:layout_alignParentLeft="false"
-            android:layout_alignParentStart="false"
-            android:layout_alignParentEnd="false"
-            android:layout_alignParentRight="true"
-
-
-
-
-            android:layout_margin="4dp"
-            app:backgroundTint="@color/background_material_light"
-            android:adjustViewBounds="true" />
 
         <ViewAnimator
             android:layout_width="wrap_content"
@@ -88,4 +97,18 @@
         android:shadowColor="#ffffff"
         android:paddingBottom="5dp"
         android:clickable="true" />
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/onofflocationbutton"
+        android:src="@drawable/ic_location_off"
+        android:background="@android:color/transparent"
+
+
+        />
+
+
 </FrameLayout>
+
+</android.support.v7.widget.Toolbar>
