--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,3 +1,9 @@
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+
 <android.support.v7.widget.Toolbar android:id="@+id/my_toolbar"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
@@ -5,98 +11,24 @@
     android:elevation="4dp"
     android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
     app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-    android:title="test"
 
-
+    android:layout_gravity="right|top"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
 
-
-
-        <RelativeLayout
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:gravity="right">
-
-            <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/layers"
-                android:src="@drawable/ic_layers_white_24dp"
-                android:background="@android:color/transparent"
-                android:paddingRight="8dp"
-                android:layout_alignParentEnd="true"
-
-
-
-
-                />
-        </RelativeLayout>
-
-
-
-
-
-
-
-
-    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:map="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/map"
-        tools:context="com.oslofjorden.MapsActivity"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
-
-
-        />
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="0dp"
-        android:gravity="center"
-        android:id="@+id/relativeLayout">
-
-
-        <ViewAnimator
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/viewAnimator"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginLeft="81dp"
-            android:layout_marginStart="81dp" />
-
-
-
-    </RelativeLayout>
-
-    <TextView
-        android:layout_width="fill_parent"
+    <ImageButton
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/infobar"
-        android:textColor="@android:color/black"
-        android:text="Kyststi-info\n\n Link her"
-        android:textAlignment="center"
-        android:gravity="center"
-        android:background="@android:color/white"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_gravity="center_horizontal|bottom"
-        android:paddingTop="5dp"
-        android:shadowColor="#ffffff"
-        android:paddingBottom="5dp"
-        android:clickable="true" />
+        android:id="@+id/layers"
+        android:src="@drawable/ic_layers_white_24dp"
+        android:background="@android:color/transparent"
+
+
+        android:adjustViewBounds="false"
+        android:clickable="false"
+        android:contentDescription="bilde"
+        android:layout_gravity="right"
+        android:paddingRight="8dp"/>
 
     <ImageButton
         android:layout_width="wrap_content"
@@ -105,10 +37,74 @@
         android:src="@drawable/ic_location_off"
         android:background="@android:color/transparent"
 
+        android:adjustViewBounds="false"
+        android:clickable="false"
+        android:contentDescription="bilde"
+        android:layout_gravity="right"
+        android:paddingRight="8dp"
 
-        />
+/>
 
 
-</FrameLayout>
 
-</android.support.v7.widget.Toolbar>
+        </android.support.v7.widget.Toolbar>
+
+
+
+       <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            xmlns:map="http://schemas.android.com/apk/res-auto"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/map"
+            tools:context="com.oslofjorden.MapsActivity"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
+
+
+            />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="0dp"
+            android:gravity="center"
+            android:id="@+id/relativeLayout">
+
+
+            <ViewAnimator
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/viewAnimator"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_marginLeft="81dp"
+                android:layout_marginStart="81dp" />
+
+
+
+
+        </RelativeLayout>
+
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/infobar"
+            android:textColor="@android:color/black"
+            android:text="Kyststi-info\n\n Link her"
+            android:textAlignment="center"
+            android:gravity="center"
+            android:background="@android:color/white"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_gravity="center_horizontal|bottom"
+            android:paddingTop="5dp"
+            android:shadowColor="#ffffff"
+            android:paddingBottom="5dp"
+            android:clickable="true" />
+
+
+    </FrameLayout>
