--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="gray">#444440</color>
     <color name="black_overlay">#66cb0c0c</color>
+    <color name="white">#ffffff</color>
 </resources>
