--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -2,7 +2,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     >
 
-    <!-- Settings, should always be in the overflow -->
+    <!-- Settings, should always be in the overflow, this is not used!!!!!!!!!!!!!!!!!!!!    -->
 
     <group
         android:checkableBehavior="all"
@@ -11,6 +11,7 @@
             android:title="Kyststier"
             app:showAsAction="always"
             android:checkable="true"
+
             >
 
         </item>
@@ -18,6 +19,7 @@
         <item android:id="@+id/badeplasser"
             android:title="Badeplasser"
             app:showAsAction="always"
+            android:icon="@drawable/swimming"
           >
 
 
