--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -59,7 +59,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/map"
-                tools:context="com.oslofjorden.MapsActivity"
+                tools:context=".MapsActivity"
                 android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
