--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,98 +1,76 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:animateLayoutChanges="true"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+        android:layout_height="match_parent">
 
 
-        <android.support.v7.widget.Toolbar android:id="@+id/my_toolbar"
+
+        <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/my_toolbar"
             android:layout_width="match_parent"
+
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimaryDark"
-
-            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
             android:layout_gravity="end|top"
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto">
-
+            android:background="?attr/colorPrimaryDark"
+            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
 
             <ProgressBar
+                android:id="@+id/loading"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:indeterminate="true"
-                android:id="@+id/loading" />
+                android:indeterminate="true" />
 
             <ImageButton
+                android:id="@+id/layers"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/layers"
-                android:src="@drawable/ic_layers_white_24dp"
-                android:background="@android:color/transparent"
-
-
+                android:layout_gravity="end"
                 android:adjustViewBounds="false"
+
+
+                android:background="@android:color/transparent"
                 android:clickable="false"
                 android:contentDescription="bilde"
-                android:layout_gravity="end"
-                android:paddingRight="8dp"/>
+                android:paddingRight="8dp"
+                android:src="@drawable/ic_layers_white_24dp" />
 
             <ImageButton
+                android:id="@+id/onofflocationbutton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/onofflocationbutton"
-                android:src="@drawable/ic_location_off"
-                android:background="@android:color/transparent"
-
-                android:adjustViewBounds="false"
-                android:contentDescription="bilde"
                 android:layout_gravity="end"
-                android:paddingRight="8dp"/>
+                android:adjustViewBounds="false"
+
+                android:background="@android:color/transparent"
+                android:contentDescription="bilde"
+                android:paddingRight="8dp"
+                android:src="@drawable/ic_location_off" />
 
         </android.support.v7.widget.Toolbar>
 
 
+        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/map"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/my_toolbar"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentBottom="true"
+            tools:context=".MapsActivity" />
 
-           <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                xmlns:map="http://schemas.android.com/apk/res-auto"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/map"
-                tools:context=".MapsActivity"
-                android:name="com.google.android.gms.maps.SupportMapFragment"
-               android:layout_alignParentBottom="true"
-               android:layout_alignParentLeft="true"
-               android:layout_alignParentStart="true"
-               android:layout_below="@+id/my_toolbar">
+    </LinearLayout>
 
+    <include layout="@layout/bottomsheet" />
 
-               <TextView
-                   android:layout_width="fill_parent"
-                   android:layout_height="wrap_content"
-                   android:id="@+id/infobar"
-                   android:textColor="@android:color/black"
-                   android:text="Kyststi-info\n\n Link her"
-                   android:textAlignment="center"
-                   android:gravity="center"
-                   android:background="@android:color/white"
-                   android:layout_alignParentLeft="true"
-                   android:layout_alignParentStart="true"
-                   android:layout_alignParentRight="true"
-                   android:layout_alignParentEnd="true"
-                   android:layout_alignParentBottom="true"
-                   android:layout_gravity="center_horizontal|bottom"
-                   android:paddingTop="5dp"
-                   android:shadowColor="#ffffff"
-                   android:paddingBottom="5dp"
-                   android:clickable="true"/>
-
-
-           </fragment>
-
-
-
-
-
-
-    </RelativeLayout>
+</android.support.design.widget.CoordinatorLayout>
