--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -106,7 +106,8 @@
                     android:layout_marginStart="8dp"
                     android:layout_height="wrap_content"
                     android:text="Kjøp"
-                    tools:text="Kjøp" />
+                    tools:text="Kjøp"
+                    android:layout_marginLeft="8dp" />
 
 
             </LinearLayout>
