--- a/app/src/main/res/drawable/background_splash.xml
+++ b/app/src/main/res/drawable/background_splash.xml
@@ -2,16 +2,13 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
 
-
-    <item
-        android:drawable="@color/gray"/>
+    <item android:drawable="@color/gray" />
 
     <item>
         <bitmap
             android:gravity="center"
-            android:src="@mipmap/splashscreen"/>
+            android:src="@mipmap/splashscreen" />
     </item>
-
 
 
 </layer-list>
