--- a/app/src/main/res/drawable/graybackground.xml
+++ b/app/src/main/res/drawable/graybackground.xml
@@ -2,8 +2,6 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
 
-
-    <item
-        android:drawable="@android:color/transparent"/>
+    <item android:drawable="@android:color/transparent" />
 
 </layer-list>
