--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -1,13 +1,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    >
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <!-- Settings, should always be in the overflow, this is not used!!!!!!!!!!!!!!!!!!!!    -->
 
-    <group
-        android:checkableBehavior="all"
-        >
-        <item android:id="@+id/kyststier"
+    <group android:checkableBehavior="all">
+        <item
+            android:id="@+id/kyststier"
             android:title="Kyststier"
             app:showAsAction="always"
             android:checkable="true"
@@ -16,23 +14,24 @@
 
         </item>
 
-        <item android:id="@+id/badeplasser"
+        <item
+            android:id="@+id/badeplasser"
             android:title="Badeplasser"
             app:showAsAction="always"
-            android:icon="@drawable/swimming"
-          >
+            android:icon="@drawable/swimming">
 
 
         </item>
 
-        <item android:id="@+id/baatramper"
+        <item
+            android:id="@+id/baatramper"
             android:title="Båtramper"
-            app:showAsAction="always"
-            >
+            app:showAsAction="always">
 
         </item>
 
-        <item android:id="@+id/butikk"
+        <item
+            android:id="@+id/butikk"
             android:title="Butikk"
             app:showAsAction="never"
 
@@ -40,97 +39,97 @@
 
         </item>
 
-        <item android:id="@+id/spisested"
+        <item
+            android:id="@+id/spisested"
             android:title="Spisesteder"
-            app:showAsAction="never"
-            >
+            app:showAsAction="never">
 
         </item>
 
-        <item android:id="@+id/fyr"
+        <item
+            android:id="@+id/fyr"
             android:title="Fyr"
-            app:showAsAction="never"
-            >
+            app:showAsAction="never">
 
         </item>
 
-        <item android:id="@+id/bunkers"
+        <item
+            android:id="@+id/bunkers"
             android:title="Bunkers"
-            app:showAsAction="never"
-            >
+            app:showAsAction="never">
 
         </item>
 
-        <item android:id="@+id/marina"
+        <item
+            android:id="@+id/marina"
             android:title="Marinaer"
-            app:showAsAction="never"
-                >
+            app:showAsAction="never">
 
         </item>
-        <item android:id="@+id/gjestehavn"
+        <item
+            android:id="@+id/gjestehavn"
             android:title="Gjestehavner"
-            app:showAsAction="never"
-            >
+            app:showAsAction="never">
 
         </item>
-        <item android:id="@+id/parkeringTrans"
+        <item
+            android:id="@+id/parkeringTrans"
             android:title="Parkering/Transport"
-            app:showAsAction="never"
-            >
+            app:showAsAction="never">
 
         </item>
-        <item android:id="@+id/poi"
+        <item
+            android:id="@+id/poi"
             android:title="Point of interest"
-            app:showAsAction="never"
-            >
+            app:showAsAction="never">
 
         </item>
 
 
-        <item android:id="@+id/uthavn"
+        <item
+            android:id="@+id/uthavn"
             android:title="Uthavner"
-            app:showAsAction="never"
-            >
+            app:showAsAction="never">
 
         </item>
 
 
-        <item android:id="@+id/mer"
+        <item
+            android:id="@+id/mer"
             android:title="Mer.."
             android:checkable="false">
 
             <menu>
-                <group
-                    android:checkableBehavior="all">
-                    <item android:id="@+id/kranTruck"
+                <group android:checkableBehavior="all">
+                    <item
+                        android:id="@+id/kranTruck"
                         android:title="Kran/Truck"
-                        app:showAsAction="never"
-                        >
+                        app:showAsAction="never">
 
                     </item>
-                    <item android:id="@+id/baatbutikk"
+                    <item
+                        android:id="@+id/baatbutikk"
                         android:title="Båtbutikker"
-                        app:showAsAction="never"
-                        >
+                        app:showAsAction="never">
 
                     </item>
-                    <item android:id="@+id/campingplass"
+                    <item
+                        android:id="@+id/campingplass"
                         android:title="Campingplasser"
-                        app:showAsAction="never"
-                        >
+                        app:showAsAction="never">
 
                     </item>
-                    <item android:id="@+id/wc"
+                    <item
+                        android:id="@+id/wc"
                         android:title="WC"
-                        app:showAsAction="never"
-                        >
+                        app:showAsAction="never">
 
                     </item>
 
-                    <item android:id="@+id/fiskeplasser"
+                    <item
+                        android:id="@+id/fiskeplasser"
                         android:title="Fiskeplasser"
-                        app:showAsAction="never"
-                        >
+                        app:showAsAction="never">
 
                     </item>
                 </group>
@@ -139,12 +138,7 @@
         </item>
 
 
-
     </group>
-
-
-
-
 
 
 </menu>
