--- a/app/src/main/res/layout/bottomsheet.xml
+++ b/app/src/main/res/layout/bottomsheet.xml
@@ -53,7 +53,7 @@
             style="@style/Base.Widget.AppCompat.Button.Colored"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Mer info" />
+            android:text="@string/mer_info" />
 
     </LinearLayout>
 
