--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,7 +38,7 @@
                     android:layout_width="24dp"
                     android:layout_height="24dp"
                     android:indeterminateTint="@color/white"
-                    android:visibility="@{viewmodel.dataLoaded ? View.GONE : View.VISIBLE}" />
+                    android:visibility="@{viewmodel.mapData != null ? View.GONE : View.VISIBLE}" />
 
                 <ImageButton
                     android:id="@+id/layersButton"
@@ -47,10 +47,10 @@
                     android:layout_gravity="end"
                     android:adjustViewBounds="false"
                     android:background="@android:color/transparent"
-                    android:clickable="@{viewmodel.dataLoaded}"
+                    android:clickable="@{viewmodel.mapData != null}"
                     android:contentDescription="@string/velg_info_knapp"
                     android:paddingRight="8dp"
-                    android:src="@{viewmodel.dataLoaded ? @drawable/ic_layers_white_24dp : @drawable/ic_layers_gray}" />
+                    android:src="@{viewmodel.mapData != null ? @drawable/ic_layers_white_24dp : @drawable/ic_layers_gray}" />
 
                 <ImageButton
                     android:id="@+id/onofflocationbutton"
@@ -78,13 +78,13 @@
 
             <RelativeLayout
                 android:id="@+id/adLayout"
-                android:visibility="@{viewmodel.inAppPurchased ? View.GONE : View.VISIBLE}"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/my_toolbar"
                 android:background="@color/gray"
                 android:clickable="true"
-                android:focusable="true">
+                android:focusable="true"
+                android:visibility="@{viewmodel.inAppPurchased ? View.GONE : View.VISIBLE}">
 
                 <LinearLayout
                     android:id="@+id/buyLayout"
